@@ -38,13 +38,40 @@ import static org.apache.cassandra.testing.TestUtils.uniqueTestTableFullName;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
- * Test that reads different tables with different schemas within the same test
+ * Tests bulk reader functionality
  */
-class ReadDifferentTablesTest extends SharedClusterSparkIntegrationTestBase
+class BulkReaderTest extends SharedClusterSparkIntegrationTestBase
 {
     static final List<String> DATASET = Arrays.asList("a", "b", "c", "d", "e", "f", "g");
     QualifiedName table1 = uniqueTestTableFullName(TEST_KEYSPACE);
     QualifiedName table2 = uniqueTestTableFullName(TEST_KEYSPACE);
+    QualifiedName tableForNullStaticColumn = uniqueTestTableFullName(TEST_KEYSPACE);
+
+    @Test
+    void testReadNullStaticColumn()
+    {
+        Dataset<Row> data = bulkReaderDataFrame(tableForNullStaticColumn).load();
+
+        List<Row> rows = data.collectAsList().stream()
+                             .sorted(Comparator.comparing(row -> row.getString(0)))
+                             .collect(Collectors.toList());
+        assertThat(rows.size()).isEqualTo(DATASET.size());
+
+        for (int i = 0; i < DATASET.size(); i++)
+        {
+            Row row = rows.get(i);
+            assertThat(row.getString(0)).isEqualTo(DATASET.get(i));
+            assertThat(row.getTimestamp(1).getTime()).isEqualTo(1432815430948560L + i);
+            if (i % 2 == 0)
+            {
+                assertThat(row.getTimestamp(2)).as("Row " + (i + 1) + " is expected to have null timestamp").isNull();
+            }
+            else
+            {
+                assertThat(row.getTimestamp(2).getTime()).isEqualTo(1432815430948560L + i);
+            }
+        }
+    }
 
     @Test
     void testReadingFromTwoDifferentTables()
@@ -78,6 +105,8 @@ class ReadDifferentTablesTest extends SharedClusterSparkIntegrationTestBase
         createTestKeyspace(TEST_KEYSPACE, DC1_RF1);
         createTestTable(table1, "CREATE TABLE IF NOT EXISTS %s (id int PRIMARY KEY, name text);");
         createTestTable(table2, "CREATE TABLE IF NOT EXISTS %s (name text PRIMARY KEY, value bigint);");
+        createTestTable(tableForNullStaticColumn, "CREATE TABLE %s (id text, timestamp timestamp,\n" +
+                                                  "   timestamp_static timestamp static, PRIMARY KEY (id, timestamp));");
 
         IInstance firstRunningInstance = cluster.getFirstRunningInstance();
         for (int i = 0; i < DATASET.size(); i++)
@@ -85,9 +114,13 @@ class ReadDifferentTablesTest extends SharedClusterSparkIntegrationTestBase
             String value = DATASET.get(i);
             String query1 = String.format("INSERT INTO %s (id, name) VALUES (%d, '%s');", table1, i, value);
             String query2 = String.format("INSERT INTO %s (name, value) VALUES ('%s', %d);", table2, value, i);
+            String query3 = String.format("INSERT INTO %s (id, timestamp, timestamp_static) VALUES ('%s',%d, %s)",
+                                          tableForNullStaticColumn, value, 1432815430948560L + i,
+                                          i % 2 == 0 ? "null" : String.valueOf(i + 1432815430948560L));
 
             firstRunningInstance.coordinator().execute(query1, ConsistencyLevel.ALL);
             firstRunningInstance.coordinator().execute(query2, ConsistencyLevel.ALL);
+            firstRunningInstance.coordinator().execute(query3, ConsistencyLevel.ALL);
         }
     }
 }
